--- a/index.html
+++ b/index.html
@@ -32,33 +32,30 @@
         align-items: center;
         font-family: 'Inter';
         background-color: #272727;
+        animation: bgChange 10s infinite;
       }
 
-      .slider {
-        width: 800px;
-        height: 400px;
-        background: url(img/img1.jpg);
-        animation: changeBackground 10s linear infinite;
+      h1 {
+        font-size: 70px;
+        text-align: center;
+        text-transform: capitalize;
+        color: white;
       }
 
-      @keyframes changeBackground {
-        0% { background: url(img/img1.jpg) }
-        20% { background: url(img/img1.jpg) }
-        25% { background: url(img/img2.jpg) }
-        45% { background: url(img/img2.jpg) }
-        50% { background: url(img/img3.jpg) }
-        70% { background: url(img/img3.jpg) }
-        75% { background: url(img/img4.jpg) }
-        100% { background: url(img/img4.jpg) }
+      @keyframes bgChange {
+        0% { background-color: #272727; }
+        20% { background-color: blue; }
+        40% { background-color: tomato; }
+        60% { background-color: lightblue; }
+        80% { background-color: darkgreen; }
+        100% { background-color: green; }
       }
 
     </style>
   </head>
   <body>
 
-    <div class="slider">
-
-    </div>
+    <h1>changed<br>background color</h1>
 
   </body>
 </html>
