--- a/index.html
+++ b/index.html
@@ -32,30 +32,66 @@
         align-items: center;
         font-family: 'Inter';
         background-color: #272727;
-        animation: bgChange 10s infinite;
       }
 
-      h1 {
-        font-size: 70px;
-        text-align: center;
-        text-transform: capitalize;
-        color: white;
+      .cradle {
+        display: flex;
+        border-top: 10px solid white;
       }
 
-      @keyframes bgChange {
-        0% { background-color: #272727; }
-        20% { background-color: blue; }
-        40% { background-color: tomato; }
-        60% { background-color: lightblue; }
-        80% { background-color: darkgreen; }
-        100% { background-color: green; }
+      .cradle span {
+        display: block;
+        width: 3px;
+        height: 300px;
+        background: white;
+        margin: 0 30px;
+        position: relative;
+        transform-origin: top;
+      }
+
+      .cradle span:before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        background-color: white;
+        transform: translateX(-50%);
+      }
+
+      .cradle span:first-child {
+        animation: left-arm 2s ease-in infinite;
+      }
+      .cradle span:last-child {
+        animation: right-arm 2s ease-in infinite 1s;
+      }
+
+      @keyframes left-arm {
+        0% { transform: rotate(0deg); }
+        25% { transform: rotate(60deg); }
+        50% { transform: rotate(0deg); }
+        100% { transform: rotate(0deg); }
+      }
+      @keyframes right-arm {
+        0% { transform: rotate(0deg); }
+        25% { transform: rotate(-60deg); }
+        50% { transform: rotate(0deg); }
+        100% { transform: rotate(0deg); }
       }
 
     </style>
   </head>
   <body>
 
-    <h1>changed<br>background color</h1>
+    <div class="cradle">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
 
   </body>
 </html>
