--- a/index.html
+++ b/index.html
@@ -31,45 +31,53 @@
         justify-content: center;
         align-items: center;
         font-family: 'Inter';
-        background-color: #0b1634;
       }
 
-      h1 {
-        font-size: 50px;
-        text-transform: uppercase;
-        letter-spacing: 10px;
-        color: white;
+      .container {
         position: relative;
+        width: 200px;
+        height: 200px;
+
       }
 
-      h1:before {
-        content: "loading...";
+      .ring {
+        width: 100%;
+        height: 100%;
+        border-left: 4px solid #262626;
+        border-radius: 50%;
+        animation: rotate 1s linear infinite;
+      }
+
+      .text {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        color: #f6b93b;
-        overflow: hidden;
-        border-right: 4px solid #f6b93b;
-        animation: animate 5s linear infinite;
+        height: 100%;
+        text-align: center;
+        line-height: 200px;
+        font-size: 22px;
+        font-weight: bold;
+        text-transform: uppercase;
       }
 
-      @keyframes animate {
+      @keyframes rotate {
         0% {
-            width: 0;
-        }
-        50% {
-            width: 100%;
+            transform: rotate(0deg);
         }
         100% {
-            width: 0;
+            transform: rotate(360deg);
         }
       }
+
     </style>
   </head>
   <body>
 
-    <h1>loading...</h1>
+    <div class="container">
+        <div class="text">loading</div>
+        <div class="ring"></div>
+    </div>
 
   </body>
 </html>
