--- a/index.html
+++ b/index.html
@@ -31,42 +31,32 @@
         justify-content: center;
         align-items: center;
         font-family: 'Inter';
+        background-color: #262626;
       }
 
-      .container {
-        position: relative;
-        width: 200px;
-        height: 200px;
-
+      .loading {
+        width: 300px;
+        height: 3px;
+        background-color: white;
+        animation: line 2s linear alternate infinite;
       }
 
-      .ring {
-        width: 100%;
-        height: 100%;
-        border-left: 4px solid #262626;
-        border-radius: 50%;
-        animation: rotate 1s linear infinite;
-      }
-
-      .text {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        line-height: 200px;
-        font-size: 22px;
-        font-weight: bold;
-        text-transform: uppercase;
-      }
-
-      @keyframes rotate {
+      @keyframes line {
         0% {
-            transform: rotate(0deg);
+            transform: scaleX(0);
+            transform-origin: left;
+        }
+        45% {
+            transform: scaleX(1);
+            transform-origin: left;
+        }
+        50% {
+            transform: scaleX(1);
+            transform-origin: right;
         }
         100% {
-            transform: rotate(360deg);
+            transform: scaleX(0);
+            transform-origin: right;
         }
       }
 
@@ -74,9 +64,7 @@
   </head>
   <body>
 
-    <div class="container">
-        <div class="text">loading</div>
-        <div class="ring"></div>
+    <div class="loading">
     </div>
 
   </body>
