--- a/index.html
+++ b/index.html
@@ -35,29 +35,50 @@
       }
 
       .loading {
-        width: 300px;
-        height: 3px;
-        background-color: white;
-        animation: line 2s linear alternate infinite;
+        display: flex;
       }
 
-      @keyframes line {
-        0% {
-            transform: scaleX(0);
-            transform-origin: left;
-        }
-        45% {
-            transform: scaleX(1);
-            transform-origin: left;
-        }
-        50% {
-            transform: scaleX(1);
-            transform-origin: right;
-        }
-        100% {
-            transform: scaleX(0);
-            transform-origin: right;
-        }
+      .obj {
+        width: 6px;
+        height: 40px;
+        background-color: #fff;
+        margin: 0 3px;
+        border-radius: 10px;
+        animation: loading 0.8s linear infinite;
+        transform-origin: bottom;
+      }
+
+      .obj:nth-child(2) {
+        animation-delay: 0.1s;
+      }
+
+      .obj:nth-child(3) {
+        animation-delay: 0.2s;
+      }
+
+      .obj:nth-child(4) {
+        animation-delay: 0.3s;
+      }
+
+      .obj:nth-child(5) {
+        animation-delay: 0.4s;
+      }
+
+      .obj:nth-child(6) {
+        animation-delay: 0.5s;
+      }
+
+      .obj:nth-child(7) {
+        animation-delay: 0.6s;
+      }
+      .obj:nth-child(8) {
+        animation-delay: 0.7s;
+      }
+
+      @keyframes loading {
+        0% { transform: scaleY(0) }
+        50% { transform: scaleY(1) }
+        100% { transform: scaleY(0) }
       }
 
     </style>
@@ -65,6 +86,14 @@
   <body>
 
     <div class="loading">
+        <div class="obj"></div>
+        <div class="obj"></div>
+        <div class="obj"></div>
+        <div class="obj"></div>
+        <div class="obj"></div>
+        <div class="obj"></div>
+        <div class="obj"></div>
+        <div class="obj"></div>
     </div>
 
   </body>
