--- a/index.html
+++ b/index.html
@@ -34,66 +34,82 @@
         background-color: #262626;
       }
 
-      .loading {
-        display: flex;
+      .loader {
+        width: 200px;
+        height: 200px;
+        position: relative;
       }
 
-      .obj {
-        width: 6px;
-        height: 40px;
+      .outer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-left: 5px solid #eb4d4b;
+        border-right: 5px solid #eb4d4b;
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        border-radius: 50%;
+        animation: rotate 1s linear infinite;
+      }
+
+      .middle {
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        right: 30px;
+        bottom: 30px;
+        border-left: 5px solid #218c74;
+        border-right: 5px solid #218c74;
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        border-radius: 50%;
+        animation: rotate 1s linear reverse infinite;
+      }
+
+      .inner {
+        position: absolute;
+        top: 60px;
+        left: 60px;
+        right: 60px;
+        bottom: 60px;
+        border-left: 5px solid #eb4d4b;
+        border-right: 5px solid #eb4d4b;
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        border-radius: 50%;
+        animation: rotate 1s linear infinite;
+      }
+
+      .dot {
+        position: absolute;
+        top: 90px;
+        left: 90px;
+        right: 90px;
+        bottom: 90px;
         background-color: #fff;
-        margin: 0 3px;
-        border-radius: 10px;
-        animation: loading 0.8s linear infinite;
-        transform-origin: bottom;
+        border-radius: 50%;
       }
 
-      .obj:nth-child(2) {
-        animation-delay: 0.1s;
-      }
-
-      .obj:nth-child(3) {
-        animation-delay: 0.2s;
-      }
-
-      .obj:nth-child(4) {
-        animation-delay: 0.3s;
-      }
-
-      .obj:nth-child(5) {
-        animation-delay: 0.4s;
-      }
-
-      .obj:nth-child(6) {
-        animation-delay: 0.5s;
-      }
-
-      .obj:nth-child(7) {
-        animation-delay: 0.6s;
-      }
-      .obj:nth-child(8) {
-        animation-delay: 0.7s;
-      }
-
-      @keyframes loading {
-        0% { transform: scaleY(0) }
-        50% { transform: scaleY(1) }
-        100% { transform: scaleY(0) }
+      @keyframes rotate {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
       }
 
     </style>
   </head>
   <body>
 
-    <div class="loading">
-        <div class="obj"></div>
-        <div class="obj"></div>
-        <div class="obj"></div>
-        <div class="obj"></div>
-        <div class="obj"></div>
-        <div class="obj"></div>
-        <div class="obj"></div>
-        <div class="obj"></div>
+    <div class="loader">
+        <div class="outer"></div>
+        <div class="middle"></div>
+        <div class="inner"></div>
+        <div class="dot"></div>
     </div>
 
   </body>
