fading out squares using CSS animations

--- a/index.html
+++ b/index.html
@@ -35,69 +35,51 @@
       }
 
       .loader {
-        width: 200px;
-        height: 200px;
+        position: relative;
+        width: 90px;
+        height: 90px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+      }
+
+      span {
+        width: 30px;
+        height: 30px;
         position: relative;
       }
 
-      .outer {
+      span:before {
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
-        right: 0;
-        bottom: 0;
-        border-left: 5px solid #eb4d4b;
-        border-right: 5px solid #eb4d4b;
-        border-top: 5px solid transparent;
-        border-bottom: 5px solid transparent;
-        border-radius: 50%;
-        animation: rotate 1s linear infinite;
-      }
-
-      .middle {
-        position: absolute;
-        top: 30px;
-        left: 30px;
-        right: 30px;
-        bottom: 30px;
-        border-left: 5px solid #218c74;
-        border-right: 5px solid #218c74;
-        border-top: 5px solid transparent;
-        border-bottom: 5px solid transparent;
-        border-radius: 50%;
-        animation: rotate 1s linear reverse infinite;
-      }
-
-      .inner {
-        position: absolute;
-        top: 60px;
-        left: 60px;
-        right: 60px;
-        bottom: 60px;
-        border-left: 5px solid #eb4d4b;
-        border-right: 5px solid #eb4d4b;
-        border-top: 5px solid transparent;
-        border-bottom: 5px solid transparent;
-        border-radius: 50%;
-        animation: rotate 1s linear infinite;
-      }
-
-      .dot {
-        position: absolute;
-        top: 90px;
-        left: 90px;
-        right: 90px;
-        bottom: 90px;
+        width: 100%;
+        height: 100%;
         background-color: #fff;
-        border-radius: 50%;
+        animation: loading 1s linear infinite;
       }
 
-      @keyframes rotate {
+      .s4:before,
+      .s5:before,
+      .s6:before {
+        animation-delay: 0.1s;
+      }
+
+      .s7:before,
+      .s8:before,
+      .s9:before {
+        animation-delay: 0.2s;
+      }
+
+      @keyframes loading {
         0% {
-            transform: rotate(0deg);
+            width: 100%;
+            height: 100%;
         }
         100% {
-            transform: rotate(360deg);
+            width: 0;
+            height: 0;
         }
       }
 
@@ -106,10 +88,15 @@
   <body>
 
     <div class="loader">
-        <div class="outer"></div>
-        <div class="middle"></div>
-        <div class="inner"></div>
-        <div class="dot"></div>
+        <span class="s1"></span>
+        <span class="s2"></span>
+        <span class="s3"></span>
+        <span class="s4"></span>
+        <span class="s5"></span>
+        <span class="s6"></span>
+        <span class="s7"></span>
+        <span class="s8"></span>
+        <span class="s9"></span>
     </div>
 
   </body>
