--- a/index.html
+++ b/index.html
@@ -35,51 +35,58 @@
       }
 
       .loader {
-        position: relative;
-        width: 90px;
-        height: 90px;
+        width: 70px;
         display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
+
       }
 
       span {
-        width: 30px;
-        height: 30px;
-        position: relative;
-      }
-
-      span:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        width: 10px;
+        height: 60px;
+        margin: 0 1px;
         background-color: #fff;
-        animation: loading 1s linear infinite;
+        animation: loading .8s ease-in-out infinite;
       }
 
-      .s4:before,
-      .s5:before,
-      .s6:before {
-        animation-delay: 0.1s;
-      }
-
-      .s7:before,
-      .s8:before,
-      .s9:before {
+      span:nth-child(1) {
+        background-color: #2eeca8;
         animation-delay: 0.2s;
+      }
+
+      span:nth-child(2) {
+        background-color: #eade3d;
+        animation-delay: 0.3s;
+      }
+
+      span:nth-child(3) {
+        background-color: #55acee;
+        animation-delay: 0.4s;
+      }
+
+      span:nth-child(4) {
+        background-color: #ec902e;
+        animation-delay: 0.5s;
+      }
+
+      span:nth-child(5) {
+        background-color: #09b7bf;
+        animation-delay: 0.6s;
+      }
+
+      span:nth-child(6) {
+        background-color: #ea3d8c;
+        animation-delay: 0.7s;
       }
 
       @keyframes loading {
         0% {
-            width: 100%;
-            height: 100%;
+            transform: scaleY(0.1);
         }
-        100% {
-            width: 0;
-            height: 0;
+        35% {
+            transform: scaleY(1);
+        }
+        60%, 100% {
+            transform: scaleY(0.1)
         }
       }
 
@@ -88,15 +95,12 @@
   <body>
 
     <div class="loader">
-        <span class="s1"></span>
-        <span class="s2"></span>
-        <span class="s3"></span>
-        <span class="s4"></span>
-        <span class="s5"></span>
-        <span class="s6"></span>
-        <span class="s7"></span>
-        <span class="s8"></span>
-        <span class="s9"></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 
   </body>
