--- a/index.html
+++ b/index.html
@@ -31,103 +31,73 @@
         justify-content: center;
         align-items: center;
         font-family: 'Inter';
-        background-color: #333;
+        background-color: #212121;
       }
 
-      .container {
+      .line {
+        width: 300px;
+        border-bottom: 4px solid white;
         position: relative;
+        animation: animateline 2s linear infinite;
+      }
+
+      .hexagon {
+        position: absolute;
+        left: 0;
+        bottom: 14px;
+        width: 50px;
+        height: 30px;
+        background-color: white;
+        animation: animatehexagon 2s linear infinite;
+      }
+
+      .hexagon:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        background-color: white;
+        transform: rotate(60deg);
       }
 
-      .text {
+      .hexagon:after {
+        content: "";
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
-        text-transform: uppercase;
-        font-size: 45px;
-        border-top: 5px solid white;
-        border-bottom: 5px solid white;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        transform: rotate(-60deg);
       }
 
-      .square {
-        position: absolute;
-        bottom: -100px;
-        background-color: #f2f2f2;
-        animation: boxes 10s infinite ease-in-out;
-      }
-
-      .square:nth-child(1) {
-        width: 75px;
-        height: 75px;
-        left: 7%;
-      }
-      .square:nth-child(2) {
-        width: 65px;
-        height: 65px;
-        left: 15%;
-        animation-delay: 4s;
-      }
-      .square:nth-child(3) {
-        width: 82px;
-        height: 82px;
-        left: 45%;
-        animation-delay: 8s;
-      }
-      .square:nth-child(4) {
-        width: 70px;
-        height: 70px;
-        left: 55%;
-        animation-delay: 2s;
-      }
-      .square:nth-child(5) {
-        width: 60px;
-        height: 60px;
-        left: 27%;
-        animation-delay: 6s;
-      }
-      .square:nth-child(6) {
-        width: 55px;
-        height: 55px;
-        left: 60%;
-        animation-delay: 4s;
-      }
-      .square:nth-child(7) {
-        width: 90px;
-        height: 90px;
-        left: 85%;
-        animation-delay: 9s;
-    }
-    .square:nth-child(8) {
-        width: 70px;
-        height: 70px;
-        left: 75%;
-        animation-delay: 4s;
-    }
-    .square:nth-child(9) {
-        width: 45px;
-        height: 45px;
-        left: 10%;
-        animation-delay: 7s;
-    }
-    .square:nth-child(10) {
-        width: 55px;
-        height: 55px;
-        left: 60%;
-        animation-delay: 7s;
-      }
-
-      @keyframes boxes {
+      @keyframes animatehexagon {
         0% {
-            bottom: -100px;
+            left: 0;
+        }
+        50% {
+            left: calc(100% - 50px);
+            transform: rotate(720deg);
         }
         100% {
-            bottom: 100%;
-            transform: rotate(180deg);
-            opacity: 0;
+            left: 0;
+        }
+      }
+
+      @keyframes animateline {
+        0%, 100% {
+            transform: rotate(30deg);
+        }
+        25% {
+            transform: rotate(0deg);
+        }
+        50% {
+            transform: rotate(-30deg);
+        }
+        75% {
+            transform: rotate(0deg);
         }
       }
 
@@ -136,18 +106,8 @@
   </head>
   <body>
 
-    <div class="container">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="text">background animation</div>
+    <div class="line">
+        <div class="hexagon"></div>
     </div>
 
   </body>
