--- a/index.html
+++ b/index.html
@@ -26,67 +26,75 @@
       }
 
       body {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         font-family: 'Inter';
+        background-color: #192a56;
       }
 
-      ul {
-        display: flex;
-      }
-
-      li {
-        list-style: none;
-      }
-
-      a {
+      .container {
         position: relative;
-        display: block;
-        margin: 0 10px;
-        padding: 5px 10px;
-        color: #333;
-        font-size: 30px;
-        text-decoration: none;
-        text-transform: uppercase;
-        transition: .5s;
-        overflow: hidden;
+        height: 100vh;
+        /* overflow: hidden; */
       }
 
-      a:hover {
+      h2 {
         color: white;
-      }
-
-      a:before {
-        content: "";
         position: absolute;
-        width: 100%;
-        height: 4px;
         top: 50%;
-        transform: translateY(-50%);
-        left: -100%;
-        background-color: #d63031;
-        transition: .5s;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 45px;
+        text-transform: uppercase;
+        z-index: 1;
       }
 
-      a:hover:before {
-        animation: line .5s linear forwards;
+      .box {
+        position: absolute;
+        top: 80%;
+        left: 45%;
+        width: 10px;
+        height: 10px;
+        border: 1px solid #003298;
+        transform: scale(0);
+        animation: boxes 12s ease-in infinite;
       }
 
-      @keyframes line {
+      .box:nth-child(2) {
+        top: 40%;
+        left: 25%;
+        border-color: red;
+        animation-delay: 2s;
+    }
+    .box:nth-child(3) {
+        top: 50%;
+        left: 75%;
+        animation-delay: 4s;
+    }
+    .box:nth-child(4) {
+        top: 10%;
+        left: 90%;
+        border-color: red;
+        animation-delay: 6s;
+    }
+    .box:nth-child(5) {
+        top: 85%;
+        left: 10%;
+        animation-delay: 8s;
+    }
+    .box:nth-child(6) {
+        top: 10%;
+        left: 50%;
+        border-color: red;
+        animation-delay: 10s;
+      }
+
+      @keyframes boxes {
         0% {
-            left: -100%;
-            height: 4px;
-        }
-        50% {
-            left: 0;
-            height: 4px;
+            transform: scale(0) rotate(0deg);
+            opacity: 1;
         }
         100% {
-            left: 0;
-            height: 100%;
-            z-index: -1;
+            transform: scale(20) rotate(960deg);
+            opacity: 0;
         }
       }
 
@@ -95,13 +103,15 @@
   </head>
   <body>
 
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
+    <div class="container">
+        <h2>background animation</h2>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
 
   </body>
 </html>
