--- a/index.html
+++ b/index.html
@@ -26,76 +26,22 @@
       }
 
       body {
-        font-family: 'Inter';
-        background-color: #192a56;
-      }
-
-      .container {
-        position: relative;
         height: 100vh;
-        /* overflow: hidden; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Inter';
       }
 
-      h2 {
-        color: white;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 45px;
-        text-transform: uppercase;
-        z-index: 1;
-      }
-
-      .box {
-        position: absolute;
-        top: 80%;
-        left: 45%;
-        width: 10px;
-        height: 10px;
-        border: 1px solid #003298;
-        transform: scale(0);
-        animation: boxes 12s ease-in infinite;
-      }
-
-      .box:nth-child(2) {
-        top: 40%;
-        left: 25%;
-        border-color: red;
-        animation-delay: 2s;
-    }
-    .box:nth-child(3) {
-        top: 50%;
-        left: 75%;
-        animation-delay: 4s;
-    }
-    .box:nth-child(4) {
-        top: 10%;
-        left: 90%;
-        border-color: red;
-        animation-delay: 6s;
-    }
-    .box:nth-child(5) {
-        top: 85%;
-        left: 10%;
-        animation-delay: 8s;
-    }
-    .box:nth-child(6) {
-        top: 10%;
-        left: 50%;
-        border-color: red;
-        animation-delay: 10s;
-      }
-
-      @keyframes boxes {
-        0% {
-            transform: scale(0) rotate(0deg);
-            opacity: 1;
-        }
-        100% {
-            transform: scale(20) rotate(960deg);
-            opacity: 0;
-        }
+      img {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+        /* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); */
+        /* clip-path: polygon(0% 0%, 100% 0%, 50% 100%); */
+        /* clip-path: polygon(0% 0%, 100% 50%, 0% 100%); */
+        /* clip-path: circle(50% at 50% 50%); */
+        clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
       }
 
 
@@ -103,15 +49,7 @@
   </head>
   <body>
 
-    <div class="container">
-        <h2>background animation</h2>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-    </div>
+    <img src="img/img3.jpg">
 
   </body>
 </html>
