--- a/index.html
+++ b/index.html
@@ -33,15 +33,54 @@
         font-family: 'Inter';
       }
 
-      img {
+      .loader {
         width: 300px;
-        height: 300px;
-        object-fit: cover;
-        /* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); */
-        /* clip-path: polygon(0% 0%, 100% 0%, 50% 100%); */
-        /* clip-path: polygon(0% 0%, 100% 50%, 0% 100%); */
-        /* clip-path: circle(50% at 50% 50%); */
-        clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+        height: 60px;
+        border: 7px solid #0a3d62;
+        border-radius: 10px;
+        position: relative;
+        overflow: hiddeng;
+      }
+
+      span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        font-size: 48px;
+        text-transform: uppercase;
+        font-weight: 600;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .top-half {
+        color: #ee5253;
+        animation: split 4s linear infinite;
+        clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
+    }
+
+    .bottom-half {
+        color: #0a3d62;
+        clip-path: polygon(0 50%, 100% 50%, 100% 100%, 0 100%);
+        animation: split 4s linear infinite reverse;
+    }
+
+      @keyframes split {
+        0% {
+            transform: translateX(100%);
+        }
+        40% {
+            transform: translateX(0);
+        }
+        60% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-100%);
+        }
       }
 
 
@@ -49,7 +88,12 @@
   </head>
   <body>
 
-    <img src="img/img3.jpg">
+    <div class="loader">
+        <div>
+            <span class="top-half">loading</span>
+            <span class="bottom-half">loading</span>
+        </div>
+    </div>
 
   </body>
 </html>
