creative CSS wavy effect using CSS clip path property

--- a/index.html
+++ b/index.html
@@ -31,68 +31,55 @@
         justify-content: center;
         align-items: center;
         font-family: 'Inter';
+        background-color: #2f2f2f;
       }
 
-      .loader {
-        width: 300px;
-        height: 60px;
-        border: 7px solid #0a3d62;
-        border-radius: 10px;
+      .wave {
         position: relative;
-        overflow: hiddeng;
+        width: 500px;
+        height: 500px;
       }
 
-      span {
+      h2 {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        font-size: 48px;
+        text-align: center;
+        line-height: 500px;
+        font-size: 170px;
         text-transform: uppercase;
-        font-weight: 600;
-        display: flex;
-        justify-content: center;
-        align-items: center;
       }
 
-      .top-half {
-        color: #ee5253;
-        animation: split 4s linear infinite;
-        clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
+      h2:nth-child(1) {
+        color: transparent;
+        -webkit-text-stroke: 2px #03a9f4;
+      }
+
+      h2:nth-child(2) {
+        color: #03a9f4;
+        animation: wave 2s ease-in-out infinite;
     }
 
-    .bottom-half {
-        color: #0a3d62;
-        clip-path: polygon(0 50%, 100% 50%, 100% 100%, 0 100%);
-        animation: split 4s linear infinite reverse;
-    }
-
-      @keyframes split {
+    @keyframes wave {
         0% {
-            transform: translateX(100%);
+            clip-path: polygon(0% 38%, 21% 40%, 38% 51%, 54% 57%, 75% 57%, 100% 52%, 100% 100%, 0% 100%);
         }
-        40% {
-            transform: translateX(0);
-        }
-        60% {
-            transform: translateX(0);
+        50% {
+            clip-path: polygon(0 49%, 16% 56%, 33% 55%, 55% 50%, 75% 42%, 100% 40%, 100% 100%, 0% 100%);
         }
         100% {
-            transform: translateX(-100%);
+            clip-path: polygon(0% 38%, 21% 40%, 38% 51%, 54% 57%, 75% 57%, 100% 52%, 100% 100%, 0% 100%);
         }
       }
+
+
 
 
     </style>
   </head>
   <body>
 
-    <div class="loader">
-        <div>
-            <span class="top-half">loading</span>
-            <span class="bottom-half">loading</span>
-        </div>
+    <div class="wave">
+        <h2>wave</h2>
+        <h2>wave</h2>
     </div>
 
   </body>
