--- a/index.html
+++ b/index.html
@@ -31,60 +31,38 @@
         justify-content: center;
         align-items: center;
         font-family: 'Inter';
-        background-color: #2f2f2f;
       }
 
-      .container {
-        position: relative;
-        width: 800px;
-        height: 500px;
-        background-color: #222;
-      }
-
-      .clip {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+      .card {
+        width: 500px;
+        height: 250px;
+        background-color: #c7ecee;
+        padding: 20px 80px 20px 20px;
+        border-radius: 10px;
         transition: all .5s;
+        clip-path: circle(7.1% at 93% 20%);
+    }
+
+    .card:hover {
+        clip-path: circle(70%);
       }
 
-      .clip1 {
-        background: url(img/img1.jpg);
-        background-size: cover;
-        background-position: center;
-    }
+      h1 {
+        margin-bottom: 20px;
+      }
 
-    .clip2 {
-          background: url(img/img2.jpg);
-          background-size: cover;
-          background-position: center;
-          clip-path: polygon(13% 0, 81% 0, 59% 100%, 36% 100%);
-    }
-    .clip3 {
-          background: url(img/img3.jpg);
-          background-size: cover;
-          background-position: center;
-          clip-path: polygon(79% 0, 100% 0, 100% 100%, 59% 100%);
-    }
+      p {
+        font-size: 18px;
+      }
 
-    .container:hover .clip {
-        clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
-    }
-
-    .container .clip:hover {
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    }
 
     </style>
   </head>
   <body>
 
-    <div class="container">
-        <div class="clip clip1"></div>
-        <div class="clip clip2"></div>
-        <div class="clip clip3"></div>
+    <div class="card">
+        <h1>information</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae obcaecati aut accusamus aliquam vero quibusdam, ipsa molestias! Nobis similique doloremque modi officia voluptatem, ex aspernatur porro, voluptatum omnis inventore incidunt.</p>
     </div>
 
   </body>
