--- a/index.html
+++ b/index.html
@@ -1,109 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;900&display=swap" rel="stylesheet" />
     <title>CSS Animations</title>
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-      body {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: 'Inter';
-    }
+        body {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Inter';
+        }
 
-    .card {
-        position: relative;
-        width: 400px;
-        height: 400px;
-        background-color: black;
-    }
+        li {
+            position: relative;
+            list-style: none;
+            margin: 10px 0;
+            overflow: hidden;
+        }
 
-    .content {
-        position: absolute;
-        width: 60%;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
-        text-align: center;
-    }
+        a {
+            position: relative;
+            display: block;
+            text-align: center;
+            margin: 0;
+            padding: 5px 10px;
+            text-transform: uppercase;
+            transition: .5s;
+            font-size: 60px;
+            font-weight: 900;
+            text-decoration: none;
+            color: transparent;
+        }
 
-    h2 {
-        margin-bottom: 20px;
-        text-transform: capitalize;
+        a:before {
+            content: attr(data-text);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            padding: 5px 0;
+            color: #262626;
+            transition: .5s;
+            transition-delay: .25s;
+            clip-path: polygon(0 0, 100% 0, 100% 50%, 0% 50%);
+        }
 
-    }
+        a:after {
+            content: attr(data-text);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            padding: 5px 0;
+            color: #262626;
+            transition: .5s;
+            transition-delay: .25s;
+            clip-path: polygon(0 50%, 100% 50%, 100% 100%, 0% 100%);
+        }
 
-    p {
-        margin-bottom: 30px;
-        text-transform: capitalize;
-    }
+        a:hover:before {
+            color: rgb(160, 0, 0);
+            transform: translate(10px, -3px);
+        }
 
-    a {
-        display: inline-block;
-        padding: 10px;
-        border: 1px solid white;
-        text-decoration: none;
-        color: white;
-        transition: .5s;
-        text-transform: capitalize;
-    }
+        a:hover:after {
+            color: rgb(160, 0, 0);
+            transform: translate(-10px, 3px);
+        }
 
-    a:hover {
-        color: black;
-        background-color: #fff;
-    }
+        li:before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 100%;
+            height: 1px;
+            background-color: #262626;
+            left: -100%;
+            transition: .5s;
+        }
 
-    img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: .5s;
-        clip-path: polygon(0 0, 100% 0,100% 100%, 0 100%);
-    }
-
-    img:hover {
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 0);
-    }
-
+        li:hover:before {
+            left: 100%;
+        }
 
     </style>
-  </head>
-  <body>
+</head>
 
-    <div class="card">
-        <div class="content">
-            <h2>image hover effect</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id, harum laborum adipisci aspernatur error maxime minima amet animi eaque odio consequatur quam nobis explicabo quidem impedit omnis, magni nulla fugit!</p>
-            <a href="#">read more</a>
-        </div>
-        <img src="img/img.jpg">
-    </div>
+<body>
 
-  </body>
+    <ul>
+        <li><a href="#" data-text="home">home</a></li>
+        <li><a href="#" data-text="about">about</a></li>
+        <li><a href="#" data-text="services">services</a></li>
+        <li><a href="#" data-text="team">team</a></li>
+        <li><a href="#" data-text="contact">contact</a></li>
+    </ul>
+
+</body>
+
 </html>
